# vibe25-swarm-cli

./: .gitignore  README.md  gmr.spec  knowledge.md  pyproject.toml  script.py
src/give_my_resources/: __init__.py  cli.py  config.py  executor.py  heartbeat.py
